# Motor_Cyberdog

./: README.md
cyberdog_sdk/: CMakeLists.txt  package.xml
cyberdog_sdk/include/: CustomInterface.h
cyberdog_sdk/src/: CustomInterface.cpp  IkCtrl.cpp  MotorCtrl.cpp
sdk_ctrl/: nohup.out
sdk_ctrl/src/sdk_ctrl/: CMakeLists.txt  package.xml
sdk_ctrl/src/sdk_ctrl/include/: CustomInterface.h
sdk_ctrl/src/sdk_ctrl/src/: CustomInterface.cpp  Example_MotorCtrl.cpp
